Migrate to Eclipse Temurin Docker image